// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorJobs Private Methods checkStatus should throw an error when an invalid status is present 1`] = `"Error Details: An unknown status "null" was received."`;

exports[`MonitorJobs Private Methods checkStatus should throw an error when an invalid status is present 2`] = `"Error Details: An unknown status "something-invalid" was received."`;

exports[`MonitorJobs Public Methods waitForJobOutputStatus should throw an error when job is not passed 1`] = `"Expect Error: IJob object (containing jobname and jobid) required"`;

exports[`MonitorJobs Public Methods waitForStatusCommon error handling should throw the proper error if pollForStatus throws a normal error 1`] = `
"Error obtaining status for jobname "JOB1234" jobid "123456".
THIS IS A NORMAL ERROR"
`;

exports[`MonitorJobs Public Methods waitForStatusCommon error handling should throw the proper error if pollForStatus throws an ImperativeError 1`] = `
"Error obtaining status for jobname "JOB1234" jobid "123456".
EXPECT THIS TO BE THROWN"
`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should error if missing parms 1`] = `"Expect Error: IMonitorJobParms object required"`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should error if missing parms.jobid 1`] = `"Expect Error: Required parameter 'jobid' must be defined"`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should error if missing parms.jobname 1`] = `"Expect Error: Required parameter 'jobname' must be defined"`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should error if missing session 1`] = `"Expect Error: Required session must be defined"`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should error if parms.attempts is not valid 1`] = `"Expect Error: Object key 'attempts' must be of type 'number'"`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should error if parms.attempts is not valid 2`] = `"Expect Error: "attempts" must be a positive integer"`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should error if parms.status is not valid 1`] = `"Expect Error: The required entry was NOT found within the input array: 'INPUT','ACTIVE','OUTPUT'"`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should error if parms.watchDelay is not valid 1`] = `"Expect Error: Object key 'watchDelay' must be of type 'number'"`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should error if parms.watchDelay is not valid 2`] = `"Expect Error: "watchDelay" must be a positive integer"`;

exports[`MonitorJobs constant defaults should have a job status 1`] = `"OUTPUT"`;

exports[`MonitorJobs constant defaults should have a max attempts 1`] = `Infinity`;

exports[`MonitorJobs constant defaults should have a watch delay interval 1`] = `3000`;
